-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
338f9c4f7c42d2a7bcd2c5b37137b3cc7cd9775d (qtbase)
It's a valid use case to have a QML property and also an attached property with the same name - see https://codereview.qt-project.org/#/c/91721/ for an example.
QDoc doesn't allow this, however.
- is required for
-
QTBUG-40300 Qt 5.4 Documentation Issues (meta bug)
-
- Closed
-
| For Gerrit Dashboard: QTBUG-40674 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 91898,2 | qdoc: Distinguish between QML property and attached property | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |